--- a/QuizWebApp/Views/Player/PlayerMainContent_ChooseTheAnswer.cshtml
+++ b/QuizWebApp/Views/Player/PlayerMainContent_ChooseTheAnswer.cshtml
@@ -11,8 +11,6 @@
     <div>
         @Html.FormatToHtml(q.Body, q.BodyFormat)
     </div>
-    @* ★ *@
-    <img src="@q.BodyImage" />
 </div>
 
 <h3>以下から回答を選択してください</h3>
@@ -25,10 +23,10 @@
             <input type="radio" name="option" value="@opt.OptionNumber" id="@("option" + opt.OptionNumber.ToString())" />
             <label for="@("option" + opt.OptionNumber.ToString())">
                 @opt.Option
-                @*@if (string.IsNullOrEmpty(opt.OptionImage) == false)
+                @if (string.IsNullOrEmpty(opt.OptionImage) == false)
                 {
                     <img src="@opt.OptionImage" />
-                }*@
+                }
             </label>
         </div>
     }
