--- a/QuizWebApp/Views/Player/PlayerMainContent_ShowCorrectAnswer.cshtml
+++ b/QuizWebApp/Views/Player/PlayerMainContent_ShowCorrectAnswer.cshtml
@@ -7,8 +7,7 @@
     var playerID = this.User.Identity.UserId();
     var yourAns = Model.Answers.First(a => a.PlayerID == playerID && a.QuestionID == q.QuestionId);
     var choosed = yourAns.ChoosedOptionIndex >= 0 ? q.GetOptions()[yourAns.ChoosedOptionIndex - 1] : null;
-    //★
-    var correctOption = q.IndexOfCorrectOption > 0 ? q.GetOptions()[q.IndexOfCorrectOption - 1]: new OptionViewModel(0, "未決定");
+    var correctOption = q.GetOptions()[q.IndexOfCorrectOption - 1];
 }
 
 <h3>問題</h3>
@@ -30,18 +29,14 @@
         else
         {
             <div>@(choosed.Option)</div>
-            @* ★ if (string.IsNullOrEmpty(choosed.OptionImage) == false)
+            if (string.IsNullOrEmpty(choosed.OptionImage) == false)
             {
                 <img src="@choosed.OptionImage" />
-            }*@
+            }
         }
     </div>
 
-    @if (correctOption.OptionNumber == 0)
-    {
-         <h4>正解はまだ決まってません</h4>
-    }
-    else if (yourAns.Status == AnswerStateType.Correct)
+    @if (yourAns.Status == AnswerStateType.Correct)
     {
         <h3 class="correct">正解! :)</h3>
     }
@@ -50,23 +45,21 @@
         <h3 class="incorrect">不正解 :(</h3>
 
         <h4>正解は</h4>
-    <div class="options">
-        <div>@(correctOption.Option)でした</div>
-        @*★@if (string.IsNullOrEmpty(correctOption.OptionImage) == false)
+        <div class="options">
+            <div>@correctOption.Option</div>
+            @if (string.IsNullOrEmpty(correctOption.OptionImage) == false)
             {
                 <img src="@correctOption.OptionImage" />
-            }*@
-        <div>@(q.Option1)：@(q.Option1Count)人</div>
-        <div>@(q.Option2)：@(q.Option2Count)人</div>
-    </div>
+            }
+        </div>
     }
 </div>
 
-@*<h3>解説</h3>
+<h3>解説</h3>
 
-        <div class="well well-small">
-            @if (string.IsNullOrEmpty(q.Comment) == false)
-            {
-                <div>@Html.FormatToHtml(q.Comment, q.CommentFormat)</div>
-            }
-    </div>*@
+<div class="well well-small">
+    @if (string.IsNullOrEmpty(q.Comment) == false)
+    {
+        <div>@Html.FormatToHtml(q.Comment, q.CommentFormat)</div>
+    }
+</div>
