--- a/QuizWebApp/Views/Question/_DisplayFormPartial.cshtml
+++ b/QuizWebApp/Views/Question/_DisplayFormPartial.cshtml
@@ -5,14 +5,11 @@
         <dt>
             @Html.DisplayNameFor(model => model.Body)
         </dt>
+
         <dd>
             @Html.FormatToHtml(Model.Body, Model.BodyFormat)
         </dd>
-        @* ★ *@
-        <dd>
-            <img src="@Model.BodyImage" class="@(string.IsNullOrEmpty(Model.BodyImage) ? "no-image" : "")" />
-        </dd>
-        
+
         <dt>回答選択肢</dt>
         <dd>
             <ol>
@@ -20,7 +17,7 @@
                 {
                     <li>
                         <div>@option.Option</div>
-                        @* ★ <div><img src="@option.OptionImage" class="@(string.IsNullOrEmpty(option.OptionImage) ? "no-image" : "")"/></div>*@
+                        <div><img src="@option.OptionImage" class="@(string.IsNullOrEmpty(option.OptionImage) ? "no-image" : "")"/></div>
                     </li>
                 }
             </ol>
