--- a/QuizWebApp/Views/Player/PlayerMainContent_Closed.cshtml
+++ b/QuizWebApp/Views/Player/PlayerMainContent_Closed.cshtml
@@ -29,10 +29,10 @@
         else
         {
             <div>@(choosed.Option)</div>
-            @*if (string.IsNullOrEmpty(choosed.OptionImage) == false)
+            if (string.IsNullOrEmpty(choosed.OptionImage) == false)
             {
                 <img src="@choosed.OptionImage" />
-            }*@
+            }
         }
     </div>
 </div>
