--- a/QuizWebApp/Views/PublicQuestion/_DisplayFormPartial.cshtml
+++ b/QuizWebApp/Views/PublicQuestion/_DisplayFormPartial.cshtml
@@ -17,7 +17,7 @@
                 {
                     <li>
                         <div>@option.Option</div>
-                        <div><img src="@option.OptionImage" class="@(string.IsNullOrEmpty(option.OptionImage) ? "no-image" : "")"/></div>
+                        @*<div><img src="@option.OptionImage" class="@(string.IsNullOrEmpty(option.OptionImage) ? "no-image" : "")"/></div>*@
                     </li>
                 }
             </ol>
