--- a/QuizWebApp/Views/Player/PlayerMainContent_ShowCorrectAnswer.cshtml
+++ b/QuizWebApp/Views/Player/PlayerMainContent_ShowCorrectAnswer.cshtml
@@ -46,7 +46,7 @@
          <h4>正解はまだ決まってません</h4>
         <h4>正解は</h4>
     <div class="options">
-        <div>@(correctOption.Option)でした</div>
+        <div>@(correctOption.Option)です</div>
         @*★@if (string.IsNullOrEmpty(correctOption.OptionImage) == false)
             {
                 <img src="@correctOption.OptionImage" />
@@ -61,7 +61,7 @@
                 
         <h4>正解は</h4>
     <div class="options">
-        <div>@(correctOption.Option)でした</div>
+        <div>@(correctOption.Option)です</div>
         @*★@if (string.IsNullOrEmpty(correctOption.OptionImage) == false)
             {
                 <img src="@correctOption.OptionImage" />
@@ -76,7 +76,7 @@
 
         <h4>正解は</h4>
     <div class="options">
-        <div>@(correctOption.Option)でした</div>
+        <div>@(correctOption.Option)です</div>
         @*★@if (string.IsNullOrEmpty(correctOption.OptionImage) == false)
             {
                 <img src="@correctOption.OptionImage" />
