--- a/QuizWebApp/Views/Shared/_Layout.cshtml
+++ b/QuizWebApp/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
                 @Html.ActionLink("Quiz WebApp", "Index", "Home", null, new { @class = "brand" })
                 <div class="nav-collapse collapse">
                     <ul class="nav">
-                        <li>@Html.ActionLink("ダッシュボード", "Index", "Dashboard", routeValues: null, htmlAttributes: new { target = "_blank", @class = "link-dashboard" })</li>
+                        @*<li>@Html.ActionLink("ダッシュボード", "Index", "Dashboard", routeValues: null, htmlAttributes: new { target = "_blank", @class = "link-dashboard" })</li>*@
                         <li>@Html.ActionLink("出題済みクイズ問題", "Index", "PublicQuestion", routeValues: null, htmlAttributes: new { target = "_blank", @class = "link-public-questions" })</li>
                     </ul>
                     <ul class="nav pull-right">
