--- a/QuizWebApp/Views/Player/PlayerMainContent_ShowCorrectAnswer.cshtml
+++ b/QuizWebApp/Views/Player/PlayerMainContent_ShowCorrectAnswer.cshtml
@@ -73,9 +73,8 @@
     {
         <h3 class="incorrect">不正解 :(</h3>
 
-        <h4>正解は</h4>
+        <div>正解は@(correctOption.Option)です</div>
     <div class="options">
-        <div>@(correctOption.Option)です</div>
         @*★@if (string.IsNullOrEmpty(correctOption.OptionImage) == false)
             {
                 <img src="@correctOption.OptionImage" />
