--- a/QuizWebApp/Views/Player/PlayerMainContent_Closed.cshtml
+++ b/QuizWebApp/Views/Player/PlayerMainContent_Closed.cshtml
@@ -42,4 +42,4 @@
     </div>
 </div>
 
-<p class="label label-wait"><i class="icon-info-sign icon-white"></i> 司会者によって正解が表示されるまで、そのままお待ちください。</p>
+<p class="label label-wait"><i class="icon-info-sign icon-white"></i> 司会者によって正解が表示されるまで、<br>そのままお待ちください。</p>
