--- a/QuizWebApp/Views/Player/PlayerMainContent_PleaseWait.cshtml
+++ b/QuizWebApp/Views/Player/PlayerMainContent_PleaseWait.cshtml
@@ -12,4 +12,4 @@
 <h3>現在のスコア</h3>
 <div>@user.Score</div>
 
-<p class="label label-wait"><i class="icon-info-sign icon-white"></i> 司会者からクイズ問題が出題されるまで、そのままお待ちください。</p>
+<p class="label label-wait"><i class="icon-info-sign icon-white"></i> 司会者からクイズ問題が出題されるまで、<br>そのままお待ちください。</p>
