--- a/QuizWebApp/Views/Player/PlayerMainContent_Closed.cshtml
+++ b/QuizWebApp/Views/Player/PlayerMainContent_Closed.cshtml
@@ -11,8 +11,7 @@
      var user = Model.Users.First(u => u.UserId == playerID);
 }
 
-<h3>現在のスコア</h3>
-<div>@user.Score</div>
+<h3>現在のスコア：@(user.Score)</h3>
 
 <h3>問題</h3>
 
