--- a/QuizWebApp/Views/Question/_DisplayFormPartial.cshtml
+++ b/QuizWebApp/Views/Question/_DisplayFormPartial.cshtml
@@ -10,7 +10,7 @@
         </dd>
         @* ★ *@
         <dd>
-            <img src="../Views/Player/@(Model.BodyImage)" class="@(string.IsNullOrEmpty(Model.BodyImage) ? "no-image" : "")" />
+            <img src="../img/@(Model.BodyImage)" class="@(string.IsNullOrEmpty(Model.BodyImage) ? "no-image" : "")" />
         </dd>
         
         <dt>回答選択肢</dt>
