--- a/QuizWebApp/Views/Player/PlayerMainContent_ChooseTheAnswer.cshtml
+++ b/QuizWebApp/Views/Player/PlayerMainContent_ChooseTheAnswer.cshtml
@@ -18,7 +18,7 @@
         @Html.FormatToHtml(q.Body, q.BodyFormat)
     </div>
     @* ★ *@
-    <img src="@q.BodyImage" />
+    <img src="../img/@(q.BodyImage)" />
 </div>
 
 <h3>以下から回答を選択してください</h3>
