--- a/QuizWebApp/Views/Question/_DisplayFormPartial.cshtml
+++ b/QuizWebApp/Views/Question/_DisplayFormPartial.cshtml
@@ -10,9 +10,8 @@
         </dd>
         @* ★ *@
         <dd>
-            @*<img src="@(Model.BodyImage)" width="200" class="@(string.IsNullOrEmpty(Model.BodyImage) ? "no-image" : "")" />*@
-            <img src="http://beerparty.apphb.com/img/glyphicons-halflings.png" width="200" class="@(string.IsNullOrEmpty(Model.BodyImage) ? "no-image" : "")" />
-        </dd>
+            <img src="http://beerparty.apphb.com/img/@(Model.BodyImage)" width="200" class="@(string.IsNullOrEmpty(Model.BodyImage) ? "no-image" : "")" />
+         </dd>
         
         <dt>回答選択肢</dt>
         <dd>
