--- a/QuizWebApp/Views/Home/Index.cshtml
+++ b/QuizWebApp/Views/Home/Index.cshtml
@@ -26,6 +26,6 @@
 else
 {
     <p>
-        <a href="@Url.Action("SignIn", "Account")" class="btn btn-block btn-large btn-primary">クイズに参加または問題を投稿するにはサインイン</a>
+        <a href="@Url.Action("SignIn", "Account")" class="btn btn-block btn-large btn-primary">クイズに参加するにはサインイン</a>
     </p>
 }
